# lipopeptides

./: .gitignore  README.md  pyproject.toml
data/tree/: cstart.fastree.treefile  cstart.iqtree.treefile  tree_data.csv
notebooks/: lipopeptides.ipynb
notebooks/ml/: lipopeptides.ipynb  logo_graph.ipynb  ml_aromaticity.ipynb  ml_beta-hydroxylation.ipynb  ml_size-category.ipynb
notebooks/tree/: fasttree_prediction.ipynb  iqtree_prediction.ipynb
predictions/ml/: ml_aromaticity.ipynb  ml_beta-hydroxylation.ipynb  ml_size-category.ipynb
predictions/ml/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
predictions/ml/catboost_info/learn/: events.out.tfevents
predictions/ml/cli/: alignment.fasta  cli.py
predictions/ml/cli/ml_model_pkl/: ml_length.pkl
predictions/ml/ml_models/: ml_aromaticity.pkl
scripts/: acylstarter_cheminformatics_analysis.py
src/cstarters/: cli.py  ml_utils.py
src/cstarters/data/: 16_aa_properties.csv  ml_hydroxylation.pkl
